--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gsap": "^3.12.7",
     "lenis": "^1.2.3",
     "motion": "^12.6.3",
-    "sass": "^1.86.0"
+    "sass": "^1.86.0",
+    "split-type": "^0.3.4"
   }
 }
